--- a/click/3/index.html
+++ b/click/3/index.html
@@ -31,7 +31,7 @@
             localStorage.setItem('utm_term', utmTerm);
 
             // 构造跳转 URL
-            const targetUrl = 'https://click-ecom.com/?a=146518&o=165705&c=0&co=194328&mt=5'
+            const targetUrl = 'https://click-ecom.com/?a=146518&c=408046&co=194328&mt=5'
                 + '&s1=Google&s2=XHH'
                 + '&s3=AW-16949989743/iHTPCNS-3sEaEO-isZI_'
                 + '&s4=consumeropinion.site/3'
