--- a/click/2/index.html
+++ b/click/2/index.html
@@ -34,7 +34,7 @@
             const targetUrl = 'https://click-ecom.com/?a=146518&o=165705&c=0&co=194328&mt=5'
                 + '&s1=Google&s2=XHH'
                 + '&s3=AW-16949989743/iHTPCNS-3sEaEO-isZI_'
-                + '&s4=consumeropinion.site/2'
+                + '&s4=fanyierji-de.onrender.com/2'
                 + '&s5=' + encodeURIComponent(gclid)
                 + '&utm_term=' + encodeURIComponent(utmTerm);
 
